k8s/security/common/default-deny-database.yml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: default-deny-database
  namespace: database

spec:
  podSelector: {}

  policyTypes:

  - Ingress

  - Egress
