k8s/security/common/default-deny-restauranty.yml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: default-deny-restauranty
  namespace: restauranty

spec:
  podSelector: {}

  policyTypes:

  - Ingress

  - Egress
